--- a/hs-probe.ioc
+++ b/hs-probe.ioc
@@ -1,29 +1,36 @@
 #MicroXplorer Configuration settings - do not modify
 Mcu.Family=STM32F7
 ProjectManager.MainLocation=Src
+RCC.USART1Freq_Value=108000000
 PH0-OSC_IN.Signal=RCC_OSC_IN
 RCC.SAI1Freq_Value=96000000
 USART2.IPParameters=VirtualMode-Asynchronous
+RCC.CortexFreq_Value=216000000
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F723IEKx
 SPI1.VirtualType=VM_MASTER
 SPI2.VirtualType=VM_MASTER
 PC10.Locked=true
-RCC.PLLCLKFreq_Value=96000000
+RCC.PLLCLKFreq_Value=216000000
 PC10.Signal=GPIO_Output
-RCC.PLLQCLKFreq_Value=96000000
-ProjectManager.functionlistsort=
+RCC.PLLQCLKFreq_Value=48000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,10-MX_USB_OTG_HS_PCD_Init-USB_OTG_HS-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 PD8.Locked=true
 PA11.Mode=Device_Only
 RCC.PLLI2SRCLKFreq_Value=96000000
+RCC.USART2Freq_Value=54000000
 PG14.GPIOParameters=GPIO_Label
 USART1.IPParameters=VirtualMode-Asynchronous
 PB13.Signal=USB_OTG_HS_VBUS
 PB15.Signal=USB_OTG_HS_DP
 PG13.Signal=GPIO_Output
 PinOutPanel.RotationAngle=0
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 ProjectManager.StackSize=0x400
+RCC.I2C3Freq_Value=54000000
+RCC.LPTIM1Freq_Value=54000000
 Mcu.IP4=SPI1
+RCC.FCLKCortexFreq_Value=216000000
 Mcu.IP5=SPI2
 Mcu.IP2=NVIC
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -32,17 +39,20 @@ Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M7
 PA12.Signal=USB_OTG_FS_DP
 Mcu.UserConstants=
-RCC.SDMMCFreq_Value=16000000
+RCC.SDMMCFreq_Value=216000000
 Mcu.ThirdPartyNb=0
 SPI1.Direction=SPI_DIRECTION_2LINES
+RCC.HCLKFreq_Value=216000000
 SH.ADCx_IN3.0=ADC1_IN3,IN3
 Mcu.IPNb=11
+RCC.PLLI2SRoutputFreq_Value=96000000
 ProjectManager.PreviousToolchain=
+RCC.APB2TimFreq_Value=216000000
 PB6.Signal=USART1_TX
-SPI1.CalculateBaudRate=8.0 MBits/s
-SH.ADCx_IN3.ConfNb=1
-PD8.GPIOParameters=GPIO_Label
 PB6.Mode=Asynchronous
+PD8.GPIOParameters=GPIO_Label
+SH.ADCx_IN3.ConfNb=1
+SPI1.CalculateBaudRate=54.0 MBits/s
 Mcu.Pin6=PB4
 RCC.SAI2Freq_Value=96000000
 Mcu.Pin7=PB3
@@ -51,6 +61,8 @@ Mcu.Pin8=PA14
 Mcu.Pin9=PA13
 RCC.VCOSAIOutputFreq_Value=192000000
 PI3.Mode=Full_Duplex_Master
+RCC.AHBFreq_Value=216000000
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 PH0-OSC_IN.Mode=HSE-External-Clock-Source
 Mcu.Pin0=PE2
 Mcu.Pin1=PE0
@@ -58,11 +70,12 @@ PD5.Mode=Asynchronous
 GPIO.groupedBy=
 Mcu.Pin2=PB8
 Mcu.Pin3=PB5
+RCC.USART3Freq_Value=54000000
 PD10.GPIOParameters=GPIO_Label
 Mcu.Pin4=PG14
 Mcu.Pin5=PG13
 ProjectManager.ProjectBuild=false
-RCC.HSE_VALUE=25000000
+RCC.HSE_VALUE=12000000
 PG13.Locked=true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -71,7 +84,7 @@ USART2.VirtualMode-Asynchronous=VM_ASYNC
 Mcu.IP10=USB_OTG_HS
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 ProjectManager.FirmwarePackage=STM32Cube FW_F7 V1.16.0
-MxDb.Version=DB.5.0.60
+MxDb.Version=DB.6.0.0
 PE0.GPIOParameters=GPIO_Label
 PB4.Mode=Full_Duplex_Master
 ProjectManager.BackupPrevious=false
@@ -80,8 +93,9 @@ PA14.Mode=Serial_Wire
 PB14.Mode=Internal_Phy_Device
 PI3.Signal=SPI2_MOSI
 PB5.Mode=Full_Duplex_Master
+SPI1.DataSize=SPI_DATASIZE_8BIT
 File.Version=6
-SPI2.CalculateBaudRate=8.0 MBits/s
+SPI2.CalculateBaudRate=27.0 MBits/s
 PE2.Signal=GPIO_Output
 PB7.Signal=USART1_RX
 PB8.Locked=true
@@ -90,6 +104,7 @@ USB_OTG_HS.IPParameters=VirtualMode
 ProjectManager.HalAssertFull=false
 ProjectManager.ProjectName=hs-probe
 PH1-OSC_OUT.Mode=HSE-External-Clock-Source
+RCC.MCO2PinFreq_Value=216000000
 Mcu.Package=UFBGA176
 SPI2.Mode=SPI_MODE_MASTER
 PG13.GPIOParameters=GPIO_Label
@@ -99,13 +114,15 @@ VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 USB_OTG_FS.VirtualMode=Device_Only
 PE0.GPIO_Label=LED3
 PI1.Mode=Full_Duplex_Master
-RCC.PLLSourceVirtualString=RCC_PLLSOURCE_HSI
+RCC.APB2CLKDivider=RCC_HCLK_DIV2
+RCC.APB1TimFreq_Value=108000000
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 SPI2.Direction=SPI_DIRECTION_2LINES
 USB_OTG_FS.IPParameters=VirtualMode
 PB13.Mode=Activate_VBUS_FS
 PB10.GPIOParameters=GPIO_Label
 PD6.Signal=USART2_RX
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 PE2.GPIO_Label=T_VCC_EN
 ProjectManager.CustomerFirmwarePackage=
 REXTPHYHS.Mode=Internal_Phy_Device
@@ -114,16 +131,20 @@ PB4.Signal=SPI1_MISO
 PA3.Signal=ADCx_IN3
 RCC.I2SFreq_Value=96000000
 REXTPHYHS.Signal=USB_OTG_HS_REXTPHYHS
+RCC.PLLQoutputFreq_Value=48000000
 ProjectManager.ProjectFileName=hs-probe.ioc
 PB8.GPIOParameters=GPIO_Label
-Mcu.PinsNb=32
+RCC.UART7Freq_Value=54000000
 PC10.GPIO_Label=LED1
+Mcu.PinsNb=32
 ProjectManager.NoMain=false
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize
 ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag
 ProjectManager.DefaultFWLocation=true
 PD5.Signal=USART2_TX
 ProjectManager.DeletePrevious=true
+RCC.UART8Freq_Value=54000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV4
 PB10.Locked=true
 PD6.Mode=Asynchronous
 PG14.Locked=true
@@ -139,13 +160,15 @@ PB8.GPIO_Label=LED2
 PA9.Mode=Activate_VBUS
 ProjectManager.TargetToolchain=EWARM V8.32
 PB10.GPIO_Label=USB_SEL
+RCC.USART6Freq_Value=108000000
 PA9.Signal=USB_OTG_FS_VBUS
 ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_3
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 PE2.GPIOParameters=GPIO_Label
+ProjectManager.RegisterCallBack=
 PE0.Locked=true
 PI1.Locked=true
-RCC.USBFreq_Value=96000000
+RCC.USBFreq_Value=48000000
 PD10.GPIO_Label=GPIO2
 RCC.PLLSAIoutputFreq_Value=96000000
 RCC.LSE_VALUE=32768
@@ -155,24 +178,28 @@ PB14.Signal=USB_OTG_HS_DM
 PG14.Signal=GPIO_Output
 RCC.PLLSAIPCLKFreq_Value=96000000
 board=custom
-RCC.VCOOutputFreq_Value=192000000
+RCC.VCOOutputFreq_Value=432000000
 ProjectManager.LastFirmware=true
 PB15.Mode=Internal_Phy_Device
-MxCube.Version=5.6.1
+RCC.APB2Freq_Value=108000000
+RCC.UART4Freq_Value=54000000
+MxCube.Version=6.0.1
+RCC.I2C1Freq_Value=54000000
 SPI1.Mode=SPI_MODE_MASTER
 PI2.Signal=SPI2_MISO
 PI1.Signal=SPI2_SCK
-RCC.RNGFreq_Value=96000000
+RCC.RNGFreq_Value=48000000
 Mcu.Pin30=PB15
 VP_SYS_VS_Systick.Mode=SysTick
 PH1-OSC_OUT.Signal=RCC_OSC_OUT
 Mcu.Pin31=VP_SYS_VS_Systick
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PC10.GPIOParameters=GPIO_Label
+RCC.UART5Freq_Value=54000000
 PA13.Mode=Serial_Wire
 PG14.GPIO_Label=GNDDet
 ProjectManager.FreePins=false
-RCC.IPParameters=FamilyName,HSE_VALUE,HSI_VALUE,I2SFreq_Value,LSE_VALUE,LSI_VALUE,PLLCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLQCLKFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIoutputFreq_Value,PLLSourceVirtualString,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC2Freq_Value,SDMMCFreq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIoutputFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC2Freq_Value,SDMMCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
 ProjectManager.AskForMigrate=true
 PE0.Signal=GPIO_Output
 Mcu.Name=STM32F723I(C-E)Kx
@@ -191,6 +218,7 @@ Mcu.IP7=USART1
 ProjectManager.CoupleFile=false
 PB3.Signal=SPI1_SCK
 ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+RCC.SYSCLKFreq_VALUE=216000000
 PB5.Signal=SPI1_MOSI
 Mcu.Pin22=PH1-OSC_OUT
 Mcu.Pin23=REXTPHYHS
@@ -219,13 +247,18 @@ ProjectManager.ComputerToolchain=false
 Mcu.Pin17=PI2
 RCC.HSI_VALUE=16000000
 Mcu.Pin18=PA11
+RCC.PLLQ=9
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 ADC1.NbrOfConversionFlag=1
 Mcu.Pin11=PB6
 Mcu.Pin12=PD6
+RCC.PLLM=12
+RCC.PLLN=432
 Mcu.Pin10=PB7
 PB8.Signal=GPIO_Output
 PE2.Locked=true
-RCC.SDMMC2Freq_Value=16000000
+RCC.I2C2Freq_Value=54000000
+RCC.SDMMC2Freq_Value=216000000
+RCC.APB1Freq_Value=54000000
 ProjectManager.DeviceId=STM32F723IEKx
 ProjectManager.LibraryCopy=0
