--- a/base-stm32.ioc
+++ b/base-stm32.ioc
@@ -102,7 +102,7 @@ PB8.Locked=true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 USB_OTG_HS.IPParameters=VirtualMode
 ProjectManager.HalAssertFull=false
-ProjectManager.ProjectName=hs-probe
+ProjectManager.ProjectName=base
 PH1-OSC_OUT.Mode=HSE-External-Clock-Source
 RCC.MCO2PinFreq_Value=216000000
 Mcu.Package=UFBGA176
@@ -132,7 +132,7 @@ PA3.Signal=ADCx_IN3
 RCC.I2SFreq_Value=96000000
 REXTPHYHS.Signal=USB_OTG_HS_REXTPHYHS
 RCC.PLLQoutputFreq_Value=48000000
-ProjectManager.ProjectFileName=hs-probe.ioc
+ProjectManager.ProjectFileName=base.ioc
 PB8.GPIOParameters=GPIO_Label
 RCC.UART7Freq_Value=54000000
 PC10.GPIO_Label=LED1
