--- a/hs-probe.ioc
+++ b/hs-probe.ioc
@@ -1,264 +1,273 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.NbrOfConversionFlag=1
+ADC1.Rank-1\#ChannelRegularConversion=1
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.master=1
+File.Version=6
+GPIO.groupedBy=
+KeepUserPlacement=false
 Mcu.Family=STM32F7
-ProjectManager.MainLocation=Src
-RCC.USART1Freq_Value=108000000
-PH0-OSC_IN.Signal=RCC_OSC_IN
-RCC.SAI1Freq_Value=96000000
-USART2.IPParameters=VirtualMode-Asynchronous
-RCC.CortexFreq_Value=216000000
-ProjectManager.KeepUserCode=true
-Mcu.UserName=STM32F723IEKx
-SPI1.VirtualType=VM_MASTER
-SPI2.VirtualType=VM_MASTER
-PC10.Locked=true
-RCC.PLLCLKFreq_Value=216000000
-PC10.Signal=GPIO_Output
-RCC.PLLQCLKFreq_Value=48000000
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_SPI2_Init-SPI2-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true,9-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,10-MX_USB_OTG_HS_PCD_Init-USB_OTG_HS-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
-PD8.Locked=true
-PA11.Mode=Device_Only
-RCC.PLLI2SRCLKFreq_Value=96000000
-RCC.USART2Freq_Value=54000000
-PG14.GPIOParameters=GPIO_Label
-USART1.IPParameters=VirtualMode-Asynchronous
-PB13.Signal=USB_OTG_HS_VBUS
-PB15.Signal=USB_OTG_HS_DP
-PG13.Signal=GPIO_Output
-PinOutPanel.RotationAngle=0
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-ProjectManager.StackSize=0x400
-RCC.I2C3Freq_Value=54000000
-RCC.LPTIM1Freq_Value=54000000
-Mcu.IP4=SPI1
-RCC.FCLKCortexFreq_Value=216000000
-Mcu.IP5=SPI2
-Mcu.IP2=NVIC
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.IP3=RCC
 Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M7
-PA12.Signal=USB_OTG_FS_DP
-Mcu.UserConstants=
-RCC.SDMMCFreq_Value=216000000
-Mcu.ThirdPartyNb=0
-SPI1.Direction=SPI_DIRECTION_2LINES
-RCC.HCLKFreq_Value=216000000
-SH.ADCx_IN3.0=ADC1_IN3,IN3
-Mcu.IPNb=11
-RCC.PLLI2SRoutputFreq_Value=96000000
-ProjectManager.PreviousToolchain=
-RCC.APB2TimFreq_Value=216000000
-PB6.Signal=USART1_TX
-PB6.Mode=Asynchronous
-PD8.GPIOParameters=GPIO_Label
-SH.ADCx_IN3.ConfNb=1
-SPI1.CalculateBaudRate=54.0 MBits/s
-Mcu.Pin6=PB4
-RCC.SAI2Freq_Value=96000000
-Mcu.Pin7=PB3
-PD8.Signal=GPIO_Output
-Mcu.Pin8=PA14
-Mcu.Pin9=PA13
-RCC.VCOSAIOutputFreq_Value=192000000
-PI3.Mode=Full_Duplex_Master
-RCC.AHBFreq_Value=216000000
-SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
-PH0-OSC_IN.Mode=HSE-External-Clock-Source
+Mcu.IP10=USB_OTG_FS
+Mcu.IP11=USB_OTG_HS
+Mcu.IP2=DAC
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SPI1
+Mcu.IP6=SPI2
+Mcu.IP7=SYS
+Mcu.IP8=USART1
+Mcu.IP9=USART2
+Mcu.IPNb=12
+Mcu.Name=STM32F723I(C-E)Kx
+Mcu.Package=UFBGA176
 Mcu.Pin0=PE2
 Mcu.Pin1=PE0
-PD5.Mode=Asynchronous
-GPIO.groupedBy=
-Mcu.Pin2=PB8
-Mcu.Pin3=PB5
-RCC.USART3Freq_Value=54000000
-PD10.GPIOParameters=GPIO_Label
-Mcu.Pin4=PG14
-Mcu.Pin5=PG13
-ProjectManager.ProjectBuild=false
-RCC.HSE_VALUE=12000000
-PG13.Locked=true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PB3.Mode=Full_Duplex_Master
-USART2.VirtualMode-Asynchronous=VM_ASYNC
-Mcu.IP10=USB_OTG_HS
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-ProjectManager.FirmwarePackage=STM32Cube FW_F7 V1.16.0
-MxDb.Version=DB.6.0.0
-PE0.GPIOParameters=GPIO_Label
-PB4.Mode=Full_Duplex_Master
-ProjectManager.BackupPrevious=false
-RCC.VCOInputFreq_Value=1000000
-PA14.Mode=Serial_Wire
-PB14.Mode=Internal_Phy_Device
-PI3.Signal=SPI2_MOSI
-PB5.Mode=Full_Duplex_Master
-SPI1.DataSize=SPI_DATASIZE_8BIT
-File.Version=6
-SPI2.CalculateBaudRate=27.0 MBits/s
-PE2.Signal=GPIO_Output
-PB7.Signal=USART1_RX
-PB8.Locked=true
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-USB_OTG_HS.IPParameters=VirtualMode
-ProjectManager.HalAssertFull=false
-ProjectManager.ProjectName=hs-probe
-PH1-OSC_OUT.Mode=HSE-External-Clock-Source
-RCC.MCO2PinFreq_Value=216000000
-Mcu.Package=UFBGA176
-SPI2.Mode=SPI_MODE_MASTER
-PG13.GPIOParameters=GPIO_Label
-ProjectManager.ToolChainLocation=
-RCC.LSI_VALUE=32000
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-USB_OTG_FS.VirtualMode=Device_Only
-PE0.GPIO_Label=LED3
-PI1.Mode=Full_Duplex_Master
-RCC.APB2CLKDivider=RCC_HCLK_DIV2
-RCC.APB1TimFreq_Value=108000000
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-SPI2.Direction=SPI_DIRECTION_2LINES
-USB_OTG_FS.IPParameters=VirtualMode
-PB13.Mode=Activate_VBUS_FS
-PB10.GPIOParameters=GPIO_Label
-PD6.Signal=USART2_RX
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
-PE2.GPIO_Label=T_VCC_EN
-ProjectManager.CustomerFirmwarePackage=
-REXTPHYHS.Mode=Internal_Phy_Device
-RCC.PLLSAIQCLKFreq_Value=96000000
-PB4.Signal=SPI1_MISO
-PA3.Signal=ADCx_IN3
-RCC.I2SFreq_Value=96000000
-REXTPHYHS.Signal=USB_OTG_HS_REXTPHYHS
-RCC.PLLQoutputFreq_Value=48000000
-ProjectManager.ProjectFileName=hs-probe.ioc
-PB8.GPIOParameters=GPIO_Label
-RCC.UART7Freq_Value=54000000
-PC10.GPIO_Label=LED1
-Mcu.PinsNb=32
-ProjectManager.NoMain=false
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize
-ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag
-ProjectManager.DefaultFWLocation=true
-PD5.Signal=USART2_TX
-ProjectManager.DeletePrevious=true
-RCC.UART8Freq_Value=54000000
-RCC.APB1CLKDivider=RCC_HCLK_DIV4
-PB10.Locked=true
-PD6.Mode=Asynchronous
-PG14.Locked=true
-PG13.GPIO_Label=RESET
-PI2.Mode=Full_Duplex_Master
-PinOutPanel.CurrentBGAView=Top
-RCC.FamilyName=M
-PD8.GPIO_Label=GPIO1
-PD10.Signal=GPIO_Output
-USART1.VirtualMode-Asynchronous=VM_ASYNC
-PA13.Signal=SYS_JTMS-SWDIO
-PB8.GPIO_Label=LED2
-PA9.Mode=Activate_VBUS
-ProjectManager.TargetToolchain=EWARM V8.32
-PB10.GPIO_Label=USB_SEL
-RCC.USART6Freq_Value=108000000
-PA9.Signal=USB_OTG_FS_VBUS
-ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_3
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
-PE2.GPIOParameters=GPIO_Label
-ProjectManager.RegisterCallBack=
-PE0.Locked=true
-PI1.Locked=true
-RCC.USBFreq_Value=48000000
-PD10.GPIO_Label=GPIO2
-RCC.PLLSAIoutputFreq_Value=96000000
-RCC.LSE_VALUE=32768
-PB10.Signal=GPIO_Output
-RCC.VCOI2SOutputFreq_Value=192000000
-PB14.Signal=USB_OTG_HS_DM
-PG14.Signal=GPIO_Output
-RCC.PLLSAIPCLKFreq_Value=96000000
-board=custom
-RCC.VCOOutputFreq_Value=432000000
-ProjectManager.LastFirmware=true
-PB15.Mode=Internal_Phy_Device
-RCC.APB2Freq_Value=108000000
-RCC.UART4Freq_Value=54000000
-MxCube.Version=6.0.1
-RCC.I2C1Freq_Value=54000000
-SPI1.Mode=SPI_MODE_MASTER
-PI2.Signal=SPI2_MISO
-PI1.Signal=SPI2_SCK
-RCC.RNGFreq_Value=48000000
-Mcu.Pin30=PB15
-VP_SYS_VS_Systick.Mode=SysTick
-PH1-OSC_OUT.Signal=RCC_OSC_OUT
-Mcu.Pin31=VP_SYS_VS_Systick
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PC10.GPIOParameters=GPIO_Label
-RCC.UART5Freq_Value=54000000
-PA13.Mode=Serial_Wire
-PG14.GPIO_Label=GNDDet
-ProjectManager.FreePins=false
-RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIoutputFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC2Freq_Value,SDMMCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
-ProjectManager.AskForMigrate=true
-PE0.Signal=GPIO_Output
-Mcu.Name=STM32F723I(C-E)Kx
-RCC.PLLI2SQCLKFreq_Value=96000000
-Mcu.Pin26=PD8
-Mcu.Pin27=PA3
-Mcu.Pin24=PD10
-ProjectManager.UnderRoot=false
-Mcu.Pin25=PB13
-Mcu.IP8=USART2
-Mcu.IP9=USB_OTG_FS
-Mcu.Pin28=PB10
-Mcu.IP6=SYS
-Mcu.Pin29=PB14
-Mcu.IP7=USART1
-ProjectManager.CoupleFile=false
-PB3.Signal=SPI1_SCK
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
-RCC.SYSCLKFreq_VALUE=216000000
-PB5.Signal=SPI1_MOSI
-Mcu.Pin22=PH1-OSC_OUT
-Mcu.Pin23=REXTPHYHS
-Mcu.Pin20=PA9
-ADC1.master=1
-Mcu.Pin21=PH0-OSC_IN
-PA12.Mode=Device_Only
-PD10.Locked=true
-NVIC.ForceEnableDMAVector=true
-KeepUserPlacement=false
-USB_OTG_HS.VirtualMode=Int_Phy_Device
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-ProjectManager.CompilerOptimize=6
-ADC1.Rank-1\#ChannelRegularConversion=1
-PA11.Signal=USB_OTG_FS_DM
-PB7.Mode=Asynchronous
-PA14.Signal=SYS_JTCK-SWCLK
-ProjectManager.HeapSize=0x200
-Mcu.Pin15=PD5
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin16=PI3
-Mcu.Pin13=PC10
-Mcu.Pin14=PA12
-Mcu.Pin19=PI1
-ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PI2
-RCC.HSI_VALUE=16000000
-Mcu.Pin18=PA11
-RCC.PLLQ=9
-NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-ADC1.NbrOfConversionFlag=1
+Mcu.Pin10=PB7
 Mcu.Pin11=PB6
 Mcu.Pin12=PD6
+Mcu.Pin13=PC10
+Mcu.Pin14=PA12
+Mcu.Pin15=PD5
+Mcu.Pin16=PI3
+Mcu.Pin17=PI2
+Mcu.Pin18=PA11
+Mcu.Pin19=PI1
+Mcu.Pin2=PB8
+Mcu.Pin20=PA9
+Mcu.Pin21=PH0-OSC_IN
+Mcu.Pin22=PH1-OSC_OUT
+Mcu.Pin23=REXTPHYHS
+Mcu.Pin24=PA4
+Mcu.Pin25=PD10
+Mcu.Pin26=PA5
+Mcu.Pin27=PB13
+Mcu.Pin28=PD8
+Mcu.Pin29=PA3
+Mcu.Pin3=PB5
+Mcu.Pin30=PB10
+Mcu.Pin31=PB14
+Mcu.Pin32=PB15
+Mcu.Pin33=VP_SYS_VS_Systick
+Mcu.Pin4=PG14
+Mcu.Pin5=PG13
+Mcu.Pin6=PB4
+Mcu.Pin7=PB3
+Mcu.Pin8=PA14
+Mcu.Pin9=PA13
+Mcu.PinsNb=34
+Mcu.ThirdPartyNb=0
+Mcu.UserConstants=
+Mcu.UserName=STM32F723IEKx
+MxCube.Version=6.3.0
+MxDb.Version=DB.6.0.30
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.ForceEnableDMAVector=true
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+PA11.Mode=Device_Only
+PA11.Signal=USB_OTG_FS_DM
+PA12.Mode=Device_Only
+PA12.Signal=USB_OTG_FS_DP
+PA13.Mode=Serial_Wire
+PA13.Signal=SYS_JTMS-SWDIO
+PA14.Mode=Serial_Wire
+PA14.Signal=SYS_JTCK-SWCLK
+PA3.Signal=ADCx_IN3
+PA4.Signal=COMP_DAC1_group
+PA5.Signal=COMP_DAC2_group
+PA9.Mode=Activate_VBUS
+PA9.Signal=USB_OTG_FS_VBUS
+PB10.GPIOParameters=GPIO_Label
+PB10.GPIO_Label=USB_SEL
+PB10.Locked=true
+PB10.Signal=GPIO_Output
+PB13.Mode=Activate_VBUS_FS
+PB13.Signal=USB_OTG_HS_VBUS
+PB14.Mode=Internal_Phy_Device
+PB14.Signal=USB_OTG_HS_DM
+PB15.Mode=Internal_Phy_Device
+PB15.Signal=USB_OTG_HS_DP
+PB3.Mode=Full_Duplex_Master
+PB3.Signal=SPI1_SCK
+PB4.Mode=Full_Duplex_Master
+PB4.Signal=SPI1_MISO
+PB5.Mode=Full_Duplex_Master
+PB5.Signal=SPI1_MOSI
+PB6.Mode=Asynchronous
+PB6.Signal=USART1_TX
+PB7.Mode=Asynchronous
+PB7.Signal=USART1_RX
+PB8.GPIOParameters=GPIO_Label
+PB8.GPIO_Label=LED2
+PB8.Locked=true
+PB8.Signal=GPIO_Output
+PC10.GPIOParameters=GPIO_Label
+PC10.GPIO_Label=LED1
+PC10.Locked=true
+PC10.Signal=GPIO_Output
+PD10.GPIOParameters=GPIO_Label
+PD10.GPIO_Label=GPIO2
+PD10.Locked=true
+PD10.Signal=GPIO_Output
+PD5.Mode=Asynchronous
+PD5.Signal=USART2_TX
+PD6.Mode=Asynchronous
+PD6.Signal=USART2_RX
+PD8.GPIOParameters=GPIO_Label
+PD8.GPIO_Label=GPIO1
+PD8.Locked=true
+PD8.Signal=GPIO_Output
+PE0.GPIOParameters=GPIO_Label
+PE0.GPIO_Label=LED3
+PE0.Locked=true
+PE0.Signal=GPIO_Output
+PE2.GPIOParameters=GPIO_Label
+PE2.GPIO_Label=T_VCC_EN
+PE2.Locked=true
+PE2.Signal=GPIO_Output
+PG13.GPIOParameters=GPIO_Label
+PG13.GPIO_Label=RESET
+PG13.Locked=true
+PG13.Signal=GPIO_Output
+PG14.GPIOParameters=GPIO_Label
+PG14.GPIO_Label=GNDDet
+PG14.Locked=true
+PG14.Signal=GPIO_Output
+PH0-OSC_IN.Mode=HSE-External-Clock-Source
+PH0-OSC_IN.Signal=RCC_OSC_IN
+PH1-OSC_OUT.Mode=HSE-External-Clock-Source
+PH1-OSC_OUT.Signal=RCC_OSC_OUT
+PI1.Locked=true
+PI1.Mode=Full_Duplex_Master
+PI1.Signal=SPI2_SCK
+PI2.Mode=Full_Duplex_Master
+PI2.Signal=SPI2_MISO
+PI3.Mode=Full_Duplex_Master
+PI3.Signal=SPI2_MOSI
+PinOutPanel.CurrentBGAView=Top
+PinOutPanel.RotationAngle=0
+ProjectManager.AskForMigrate=true
+ProjectManager.BackupPrevious=false
+ProjectManager.CompilerOptimize=6
+ProjectManager.ComputerToolchain=false
+ProjectManager.CoupleFile=false
+ProjectManager.CustomerFirmwarePackage=
+ProjectManager.DefaultFWLocation=true
+ProjectManager.DeletePrevious=true
+ProjectManager.DeviceId=STM32F723IEKx
+ProjectManager.FirmwarePackage=STM32Cube FW_F7 V1.16.1
+ProjectManager.FreePins=false
+ProjectManager.HalAssertFull=false
+ProjectManager.HeapSize=0x200
+ProjectManager.KeepUserCode=true
+ProjectManager.LastFirmware=true
+ProjectManager.LibraryCopy=0
+ProjectManager.MainLocation=Src
+ProjectManager.NoMain=false
+ProjectManager.PreviousToolchain=
+ProjectManager.ProjectBuild=false
+ProjectManager.ProjectFileName=hs-probe.ioc
+ProjectManager.ProjectName=hs-probe
+ProjectManager.RegisterCallBack=
+ProjectManager.StackSize=0x400
+ProjectManager.TargetToolchain=EWARM V8.32
+ProjectManager.ToolChainLocation=
+ProjectManager.UnderRoot=false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,9-MX_USB_OTG_HS_PCD_Init-USB_OTG_HS-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+RCC.AHBFreq_Value=216000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV4
+RCC.APB1Freq_Value=54000000
+RCC.APB1TimFreq_Value=108000000
+RCC.APB2CLKDivider=RCC_HCLK_DIV2
+RCC.APB2Freq_Value=108000000
+RCC.APB2TimFreq_Value=216000000
+RCC.CortexFreq_Value=216000000
+RCC.FCLKCortexFreq_Value=216000000
+RCC.FamilyName=M
+RCC.HCLKFreq_Value=216000000
+RCC.HSE_VALUE=12000000
+RCC.HSI_VALUE=16000000
+RCC.I2C1Freq_Value=54000000
+RCC.I2C2Freq_Value=54000000
+RCC.I2C3Freq_Value=54000000
+RCC.I2SFreq_Value=96000000
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SFreq_Value,LPTIM1Freq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIoutputFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC2Freq_Value,SDMMCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
+RCC.LPTIM1Freq_Value=54000000
+RCC.LSE_VALUE=32768
+RCC.LSI_VALUE=32000
+RCC.MCO2PinFreq_Value=216000000
+RCC.PLLCLKFreq_Value=216000000
+RCC.PLLI2SQCLKFreq_Value=96000000
+RCC.PLLI2SRCLKFreq_Value=96000000
+RCC.PLLI2SRoutputFreq_Value=96000000
 RCC.PLLM=12
 RCC.PLLN=432
-Mcu.Pin10=PB7
-PB8.Signal=GPIO_Output
-PE2.Locked=true
-RCC.I2C2Freq_Value=54000000
+RCC.PLLQ=9
+RCC.PLLQCLKFreq_Value=48000000
+RCC.PLLQoutputFreq_Value=48000000
+RCC.PLLSAIPCLKFreq_Value=96000000
+RCC.PLLSAIQCLKFreq_Value=96000000
+RCC.PLLSAIoutputFreq_Value=96000000
+RCC.RNGFreq_Value=48000000
+RCC.SAI1Freq_Value=96000000
+RCC.SAI2Freq_Value=96000000
 RCC.SDMMC2Freq_Value=216000000
-RCC.APB1Freq_Value=54000000
-ProjectManager.DeviceId=STM32F723IEKx
-ProjectManager.LibraryCopy=0
+RCC.SDMMCFreq_Value=216000000
+RCC.SYSCLKFreq_VALUE=216000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.UART4Freq_Value=54000000
+RCC.UART5Freq_Value=54000000
+RCC.UART7Freq_Value=54000000
+RCC.UART8Freq_Value=54000000
+RCC.USART1Freq_Value=108000000
+RCC.USART2Freq_Value=54000000
+RCC.USART3Freq_Value=54000000
+RCC.USART6Freq_Value=108000000
+RCC.USBFreq_Value=48000000
+RCC.VCOI2SOutputFreq_Value=192000000
+RCC.VCOInputFreq_Value=1000000
+RCC.VCOOutputFreq_Value=432000000
+RCC.VCOSAIOutputFreq_Value=192000000
+REXTPHYHS.Mode=Internal_Phy_Device
+REXTPHYHS.Signal=USB_OTG_HS_REXTPHYHS
+SH.ADCx_IN3.0=ADC1_IN3,IN3
+SH.ADCx_IN3.ConfNb=1
+SH.COMP_DAC1_group.0=DAC_OUT1,DAC_OUT1
+SH.COMP_DAC1_group.ConfNb=1
+SH.COMP_DAC2_group.0=DAC_OUT2,DAC_OUT2
+SH.COMP_DAC2_group.ConfNb=1
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
+SPI1.CalculateBaudRate=54.0 MBits/s
+SPI1.DataSize=SPI_DATASIZE_8BIT
+SPI1.Direction=SPI_DIRECTION_2LINES
+SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,DataSize
+SPI1.Mode=SPI_MODE_MASTER
+SPI1.VirtualType=VM_MASTER
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
+SPI2.CalculateBaudRate=27.0 MBits/s
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualType=VM_MASTER
+USART1.IPParameters=VirtualMode-Asynchronous
+USART1.VirtualMode-Asynchronous=VM_ASYNC
+USART2.IPParameters=VirtualMode-Asynchronous
+USART2.VirtualMode-Asynchronous=VM_ASYNC
+USB_OTG_FS.IPParameters=VirtualMode
+USB_OTG_FS.VirtualMode=Device_Only
+USB_OTG_HS.IPParameters=VirtualMode
+USB_OTG_HS.VirtualMode=Int_Phy_Device
+VP_SYS_VS_Systick.Mode=SysTick
+VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+board=custom
